--- a/languages/AWPCP.pot
+++ b/languages/AWPCP.pot
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version:  \n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/another-wordpress-classifieds-plugin\n"
-"POT-Creation-Date: 2013-11-02 01:31:30+00:00\n"
+"POT-Creation-Date: 2013-11-20 21:59:34+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -486,6 +486,9 @@ msgid "Ad email and access key"
 msgstr ""
 
 msgid "Ad/Listings"
+msgstr ""
+
+msgid "Ad/Listings settings page"
 msgstr ""
 
 msgid "AdSense"
@@ -1647,13 +1650,16 @@ msgid "Enter the category name"
 msgstr ""
 
 msgctxt "CAPTCHA"
-msgid "Enter the value of the following sum: %d + %d "
+msgid "Enter the value of the following sum: %d + %d"
 msgstr ""
 
 msgid "Enter your Ad access key"
 msgstr ""
 
 msgid "Enter your email address"
+msgstr ""
+
+msgid "Error"
 msgstr ""
 
 msgid "Error connecting to %s"
@@ -1894,6 +1900,9 @@ msgid "Go to the %s section to edit/delete current categories or add new categor
 msgstr ""
 
 msgid "Go to the %s section to manage the Images and Attachments for this Ad."
+msgstr ""
+
+msgid "Go to the %s to change the Single Ad layout."
 msgstr ""
 
 msgid "Go to the first page"
@@ -3621,6 +3630,10 @@ msgctxt "Select <Region Type> in Multiple Region Selector"
 msgid "Select %s"
 msgstr ""
 
+msgctxt "place ad order step"
+msgid "Select Category"
+msgstr ""
+
 msgid "Select Field Input Type"
 msgstr ""
 
@@ -4156,6 +4169,9 @@ msgstr ""
 msgid "The AWPCP Attachments module requires AWPCP version %s or newer!"
 msgstr ""
 
+msgid "The AWPCP Attachments module requires that you add an '$attachments' placeholder to the Single Ad layout. The placeholder will be replaced with a list of the attachments for the current Ad. Without the placeholder, the attachments won't be shown in the Ad's single view."
+msgstr ""
+
 msgid "The AWPCP Authorize.Net module requires AWPCP version %s or newer!"
 msgstr ""
 
@@ -4195,6 +4211,9 @@ msgid "The AWPCP RSS module requires AWPCP version %s or newer!"
 msgstr ""
 
 msgid "The AWPCP Region Control module requires AWPCP version %s or newer!"
+msgstr ""
+
+msgid "The AWPCP Remove Powered By module requires AWPCP version %s or newer!"
 msgstr ""
 
 msgid "The AWPCP Subscriptions module requires AWPCP version %s or newer!"
@@ -4887,6 +4906,9 @@ msgstr ""
 msgid "This settings section is not available yet. Please fill out required fields above and save your settings."
 msgstr ""
 
+msgid "This version of AWPCP %1$s module is not compatible with AWPCP version %2$s. Please get AWPCP %1$s %3$s or newer!"
+msgstr ""
+
 msgid "Thousands separator"
 msgstr ""
 
@@ -5242,7 +5264,7 @@ msgstr ""
 msgid "We couldn't determine the payment status for your transaction. Please contact customer service if you are viewing this message after having made a payment. If you have not tried to make a payment and you are viewing this message, it means this message is being shown in error and can be disregarded."
 msgstr ""
 
-msgid "We found some errors, please fix them and submit the form again."
+msgid "We found errors in the details you submitted. A detailed error message is shown in front or below each invalid field. Please fix the errors and submit the form again."
 msgstr ""
 
 msgid "We haven't received your payment information from PayPal yet and we are unable to verify your transaction. Please reload this page or visit <a href=\"%s\">%s</a> in 30 seconds to continue placing your Ad."
@@ -5751,6 +5773,10 @@ msgid "continue"
 msgstr ""
 
 msgid "is Coupon active?"
+msgstr ""
+
+msgctxt "loading region options"
+msgid "loading..."
 msgstr ""
 
 msgid "reCAPTCHA (recommended)"
