--- a/languages/AWPCP.pot
+++ b/languages/AWPCP.pot
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version:  \n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/another-wordpress-classifieds-plugin\n"
-"POT-Creation-Date: 2013-11-20 21:59:34+00:00\n"
+"POT-Creation-Date: 2013-12-02 16:46:34+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -1175,9 +1175,6 @@ msgstr ""
 msgid "Could not save the information to the database for %s in row %d"
 msgstr ""
 
-msgid "Could not save the information to the database for: %s"
-msgstr ""
-
 msgid "Could not validate User Access Token. Are you connected to the internet?"
 msgstr ""
 
@@ -1561,12 +1558,7 @@ msgstr ""
 msgid "Email address for PayPal payments (if running in pay mode and if PayPal is activated)."
 msgstr ""
 
-msgid "Email sent on:"
-msgstr ""
-
-msgid ""
-"Email sent on: %s\n"
-"\n"
+msgid "Email sent %s."
 msgstr ""
 
 msgid "Emails are sent to your WordPress admin email. If you prefere to receive emails in a different address, please enter it here."
@@ -2153,6 +2145,9 @@ msgstr ""
 msgid "Imported rows:"
 msgstr ""
 
+msgid "Include Ad access key in email messages"
+msgstr ""
+
 msgid "Include Ad access key in email notifications. You may want to uncheck this option if you are using the Ad Management panel, but is not necessary."
 msgstr ""
 
@@ -2692,13 +2687,7 @@ msgctxt "upload files"
 msgid "No files were uploaded"
 msgstr ""
 
-msgid "No image files were uploaded"
-msgstr ""
-
 msgid "No items found."
-msgstr ""
-
-msgid "No more images can be added to this Ad. The Ad already have %d of %d images allowed."
 msgstr ""
 
 msgctxt "awpcp latest news"
@@ -4240,9 +4229,6 @@ msgstr ""
 msgid "The Ad doesn't exists."
 msgstr ""
 
-msgid "The Ad doesn't exists. All uploaded files were rejected."
-msgstr ""
-
 msgid "The Ad has been deleted"
 msgstr ""
 
@@ -5150,6 +5136,9 @@ msgstr ""
 msgid "Use multiple dropdowns to choose categories"
 msgstr ""
 
+msgid "Use sender email for reply messages"
+msgstr ""
+
 msgctxt "upload files step"
 msgid "Use the check icons in front of each upload field to mark an uploaded image as the primary image for the Ad."
 msgstr ""
@@ -5431,9 +5420,6 @@ msgstr ""
 
 msgctxt "upload files"
 msgid "You can't add more files to this Ad. There are not remaining attachment slots."
-msgstr ""
-
-msgid "You can't add more images to this Ad. There are not remaining images slots."
 msgstr ""
 
 msgctxt "upload files"
