--- a/languages/AWPCP.pot
+++ b/languages/AWPCP.pot
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version:  \n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/another-wordpress-classifieds-plugin\n"
-"POT-Creation-Date: 2013-12-02 16:46:34+00:00\n"
+"POT-Creation-Date: 2013-12-30 18:47:51+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -443,7 +443,7 @@ msgstr ""
 msgid "Ad Expired Message"
 msgstr ""
 
-msgid "Ad Headline"
+msgid "Ad ID"
 msgstr ""
 
 msgid "Ad Information"
@@ -523,9 +523,6 @@ msgid "Add File"
 msgstr ""
 
 msgid "Add Files"
-msgstr ""
-
-msgid "Add Image"
 msgstr ""
 
 msgctxt "AWPCP"
@@ -608,6 +605,18 @@ msgid "All"
 msgstr ""
 
 msgid "All Ads associated to Fee %s have been associated with Fee %s."
+msgstr ""
+
+msgid "All Categories"
+msgstr ""
+
+msgid "All Contact Names"
+msgstr ""
+
+msgid "All Sub-categories"
+msgstr ""
+
+msgid "All Users"
 msgstr ""
 
 msgid "All ads must first be approved by the administrator before they are activated in the system. As soon as an admin has approved your ad it will become visible in the system. Thank you for your business."
@@ -954,10 +963,6 @@ msgstr ""
 msgid "Characters Allowed in Title"
 msgstr ""
 
-msgctxt "place ad payment terms column headers"
-msgid "Characters Allowed in Title"
-msgstr ""
-
 msgid "Characters in Description"
 msgstr ""
 
@@ -965,6 +970,10 @@ msgctxt "place ad payment terms column headers"
 msgid "Characters in Description"
 msgstr ""
 
+msgid "Characters in Title"
+msgstr ""
+
+msgctxt "place ad payment terms column headers"
 msgid "Characters in Title"
 msgstr ""
 
@@ -1371,9 +1380,6 @@ msgctxt "upload images"
 msgid "Delete Image"
 msgstr ""
 
-msgid "Delete Selected Ads"
-msgstr ""
-
 msgid "Delete Selected Categories"
 msgstr ""
 
@@ -1756,9 +1762,6 @@ msgid "Fee"
 msgstr ""
 
 msgid "Fee Per Category Module"
-msgstr ""
-
-msgid "Fee Plan"
 msgstr ""
 
 msgid "Fee order"
@@ -2295,12 +2298,6 @@ msgstr ""
 msgid "Long Text"
 msgstr ""
 
-msgid "Look Up Ad"
-msgstr ""
-
-msgid "Look Up Ad By"
-msgstr ""
-
 msgid "Looking for a job? Trying to find a date? Looking for an apartment? Browse our classifieds. Have a job to advertise? An apartment to rent? Post a classified ad."
 msgstr ""
 
@@ -2706,6 +2703,9 @@ msgstr ""
 msgid "No premium modules installed."
 msgstr ""
 
+msgid "No results found. Exepcting one."
+msgstr ""
+
 msgid "No specific category was selected for browsing so you are viewing listings from all categories."
 msgstr ""
 
@@ -2765,10 +2765,10 @@ msgstr ""
 msgid "Number of active listings currently in the system"
 msgstr ""
 
-msgid "Number of characters allowed in Ad details."
+msgid "Number of characters allowed in Ad details. Please note this is the default value and can be overwritten in Fees and Subscription Plans."
 msgstr ""
 
-msgid "Number of characters allowed in Ad title."
+msgid "Number of characters allowed in Ad title. Please note this is the default value and can be overwritten in Fees and Subscription Plans."
 msgstr ""
 
 msgid "Number of columns of Extra Fields to show."
@@ -2796,6 +2796,12 @@ msgid "Number of items to show in RSS feed"
 msgstr ""
 
 msgid "Number of sub level children categories"
+msgstr ""
+
+msgid "Number of words in Ad excerpt"
+msgstr ""
+
+msgid "Number of words shown by the Ad excerpt placeholder."
 msgstr ""
 
 msgid "Numeric decimal allowed"
@@ -2947,6 +2953,9 @@ msgid "PayPal receiver email"
 msgstr ""
 
 msgid "PayPal returned the following status from your payment: %s. %d payment variables were posted."
+msgstr ""
+
+msgid "Payer Email"
 msgstr ""
 
 msgid "Payment"
@@ -3400,9 +3409,6 @@ msgstr ""
 msgid "Renew your ad by visiting:"
 msgstr ""
 
-msgid "Renewed"
-msgstr ""
-
 msgid "Renewed Date"
 msgstr ""
 
@@ -3663,13 +3669,13 @@ msgctxt "add credit order step"
 msgid "Select a Credit Plan"
 msgstr ""
 
+msgid "Select a Sub-category"
+msgstr ""
+
+msgid "Select a Sub-category (optional)"
+msgstr ""
+
 msgid "Select a Subscription Plan"
-msgstr ""
-
-msgid "Select a sub category"
-msgstr ""
-
-msgid "Select a sub category (optional)"
 msgstr ""
 
 msgid "Select an User"
@@ -3956,9 +3962,6 @@ msgid "Sorry but you cannot delete the default category. The default category ca
 msgstr ""
 
 msgid "Sorry, that Ad is no available. Please try browsing or searching existing ads."
-msgstr ""
-
-msgid "Sort Ads By"
 msgstr ""
 
 msgid "Start & End Date"
@@ -4944,6 +4947,9 @@ msgid "To choose one of the existing images as the primary image for your Ad, cl
 msgstr ""
 
 msgid "To use reCAPTCHA you must get an API key from %s."
+msgstr ""
+
+msgid "Too many results found. Expecting one."
 msgstr ""
 
 msgid "Top Level Category"
